# desktop

email/: email.spec  main.spec  pyproject.toml
email/src/: clients.py  main.py
gui/: pyproject.toml
gui/src/: hello.py
